--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <header id="home">
         <h1>Selamat Datang</h1>
         <p>Website Modern dengan Desain Elegan</p>
-        <a href="#features" class="btn">Jelajahi</a>
+        <a href="Sann.html" class="btn">Jelajahi</a>
     </header>
 
     <!-- About Section -->
