--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Website Modern</title>
+    <title>Sann</title>
     <link rel="stylesheet" href="style.css">
     <script defer src="script.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -12,7 +12,7 @@
 <body>
     <!-- Navbar -->
     <nav>
-        <div class="logo">ModernWeb</div>
+        <div class="logo">ellcontol</div>
         <div class="menu-toggle" onclick="toggleMenu()">&#9776;</div>
         <ul class="nav-links">
             <li><a href="#home">Beranda</a></li>
@@ -25,38 +25,38 @@
     <!-- Hero Section -->
     <header id="home">
         <h1>Selamat Datang</h1>
-        <p>Website Modern dengan Desain Elegan</p>
+        <p>Di website ellcontol</p>
         <a href="Sann.html" class="btn">Jelajahi</a>
     </header>
 
     <!-- About Section -->
     <section id="about">
         <h2>Tentang Kami</h2>
-        <p>Kami menyediakan desain web yang responsif, modern, dan user-friendly.</p>
+        <p>Gatau males pengen beli truck.</p>
     </section>
 
     <!-- Features Section -->
     <section id="features">
-        <h2>Fitur</h2>
+        <h2>Media</h2>
         <div class="features-container">
             <div class="feature-card">
-                <h3>Desain Responsif</h3>
-                <p>Website yang bisa diakses di berbagai perangkat.</p>
+                <h3>TikTok</h3>
+                <p>.</p>
             </div>
             <div class="feature-card">
-                <h3>Efek Animasi</h3>
-                <p>Transisi yang halus untuk pengalaman pengguna lebih baik.</p>
+                <h3>Instagram</h3>
+                <p>.</p>
             </div>
             <div class="feature-card">
-                <h3>Mode Gelap</h3>
-                <p>Warna hitam dan abu-abu untuk tampilan elegan.</p>
+                <h3>Diacord</h3>
+                <p>.</p>
             </div>
         </div>
     </section>
 
     <!-- Footer -->
     <footer id="contact">
-        <p>&copy; 2025 ModernWeb. Semua Hak Dilindungi.</p>
+        <p>&copy; 2025 Sann. Semua Hak Dilindungi.</p>
     </footer>
 </body>
 </html>
