--- a/index.html
+++ b/index.html
@@ -37,19 +37,19 @@
 
     <!-- Features Section -->
     <section id="features">
-        <h2>Media</h2>
+        <h2>Tentang Media Kami</h2>
         <div class="features-container">
             <div class="feature-card">
                 <h3>TikTok</h3>
-                <p>.</p>
+                <p>TikTok adalah platform media sosial berbasis video pendek yang memungkinkan pengguna membuat, mengedit, dan membagikan video dengan durasi mulai dari beberapa detik hingga beberapa menit. Aplikasi ini populer karena fitur kreatifnya, seperti filter, efek, musik latar, dan algoritma yang sangat personal dalam menampilkan konten yang relevan bagi setiap pengguna.</p>
             </div>
             <div class="feature-card">
                 <h3>Instagram</h3>
-                <p>.</p>
+                <p>Instagram (IG) adalah platform media sosial yang memungkinkan pengguna untuk berbagi foto, video, dan cerita (Instagram Stories) dengan pengikut mereka. Aplikasi ini berfokus pada konten visual dan memiliki berbagai fitur interaktif untuk berkomunikasi dan berkreasi.</p>
             </div>
             <div class="feature-card">
                 <h3>Diacord</h3>
-                <p>.</p>
+                <p>Discord adalah aplikasi komunikasi yang memungkinkan pengguna untuk melakukan chat, panggilan suara, dan video dalam server yang dapat disesuaikan. Discord awalnya populer di kalangan gamer, tetapi sekarang digunakan oleh berbagai komunitas, termasuk pengembang, pelajar, dan penggemar topik tertentu.</p>
             </div>
         </div>
     </section>
