--- a/Sann.html
+++ b/Sann.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Halaman SANN</title>
+    <title>Menu Navigasi</title>
     <link rel="stylesheet" href="style.css">
     <script defer src="script.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -14,27 +14,27 @@
     <!-- Hero Section -->
     <section class="hero">
         <div class="hero-content">
-            <h1>Selamat Datang di SANN</h1>
-            <p>Jelajahi dunia yang lebih menarik dengan desain modern</p>
-            <a href="index.html" class="btn">Kembali</a>
+            <h1>Menu Navigasi</h1>
+            <p>Pilih halaman yang ingin Anda kunjungi.</p>
+            <a href="index.html" class="btn">Kembali ke Home</a>
         </div>
     </section>
 
-    <!-- Features Section -->
-    <section class="features">
-        <h2>Kenapa Memilih SANN?</h2>
-        <div class="features-container">
-            <div class="feature-card">
-                <h3>Desain Modern</h3>
-                <p>Antarmuka yang keren dengan animasi smooth.</p>
+    <!-- Menu Navigasi -->
+    <section class="menu">
+        <h2>Pilih Halaman</h2>
+        <div class="menu-container">
+            <div class="menu-card" onclick="openPage('halaman1.html')">
+                <h3>Halaman 1</h3>
+                <p>Deskripsi singkat halaman pertama.</p>
             </div>
-            <div class="feature-card">
-                <h3>Interaktif</h3>
-                <p>Efek hover dan animasi saat scrolling.</p>
+            <div class="menu-card" onclick="openPage('halaman2.html')">
+                <h3>Halaman 2</h3>
+                <p>Deskripsi singkat halaman kedua.</p>
             </div>
-            <div class="feature-card">
-                <h3>Responsif</h3>
-                <p>Bisa diakses di semua perangkat dengan tampilan optimal.</p>
+            <div class="menu-card" onclick="openPage('halaman3.html')">
+                <h3>Halaman 3</h3>
+                <p>Deskripsi singkat halaman ketiga.</p>
             </div>
         </div>
     </section>
@@ -45,5 +45,4 @@
     </footer>
 
 </body>
-  </html>
-  
+</html>
