--- a/index.html
+++ b/index.html
@@ -21,7 +21,16 @@
             <li><a href="#contact">Kontak</a></li>
         </ul>
     </nav>
-
+<!-- Pop-up Modal -->
+<div id="popupModal" class="popup">
+    <div class="popup-content">
+        <span class="close-btn" onclick="closePopup()">&times;</span>
+        <h2>Selamat Datang!</h2>
+        <p>Terima kasih telah mengunjungi website kami.</p>
+        <button class="btn" onclick="closePopup()">Tutup</button>
+    </div>
+</div>
+    
     <!-- Hero Section -->
     <header id="home">
         <h1>Selamat Datang</h1>
