--- a/Sann.html
+++ b/Sann.html
@@ -10,7 +10,15 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-
+    
+<!-- Form Pencarian Google -->
+<div class="search-container">
+    <form action="https://www.google.com/search" method="GET" target="_blank">
+        <input type="text" name="q" placeholder="Cari di Google..." required>
+        <button type="submit"><i class="fas fa-search"></i> Cari</button>
+    </form>
+</div>
+    
     <!-- Hero Section -->
     <section class="hero">
         <div class="hero-content">
