--- a/Sann.html
+++ b/Sann.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Menu Navigasi</title>
+    <title>Sann</title>
     <link rel="stylesheet" href="style.css">
     <script defer src="script.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -22,7 +22,7 @@
     <!-- Hero Section -->
     <section class="hero">
         <div class="hero-content">
-            <h1>Menu Navigasi</h1>
+            <h1>ellcontol</h1>
             <p>Pilih halaman yang ingin Anda kunjungi.</p>
             <a href="index.html" class="btn">Kembali ke Home</a>
         </div>
@@ -33,15 +33,15 @@
         <h2>Pilih Halaman</h2>
         <div class="menu-container">
             <div class="menu-card" onclick="openPage('halaman1.html')">
-                <h3>Halaman 1</h3>
+                <h3>TikTok</h3>
                 <p>Deskripsi singkat halaman pertama.</p>
             </div>
             <div class="menu-card" onclick="openPage('halaman2.html')">
-                <h3>Halaman 2</h3>
+                <h3>Instagram</h3>
                 <p>Deskripsi singkat halaman kedua.</p>
             </div>
             <div class="menu-card" onclick="openPage('halaman3.html')">
-                <h3>Halaman 3</h3>
+                <h3>Discord</h3>
                 <p>Deskripsi singkat halaman ketiga.</p>
             </div>
         </div>
@@ -49,7 +49,7 @@
 
     <!-- Footer -->
     <footer>
-        <p>&copy; 2025 SANN. Semua Hak Dilindungi.</p>
+        <p>&copy; 2025 Sann. Semua Hak Dilindungi.</p>
     </footer>
 
 </body>
