--- a/Sann.html
+++ b/Sann.html
@@ -32,15 +32,15 @@
     <section class="menu">
         <h2>Pilih Halaman</h2>
         <div class="menu-container">
-            <div class="menu-card" onclick="openPage('halaman1.html')">
+            <div class="menu-card" onclick="openPage('Tiktok.html')">
                 <h3>TikTok</h3>
                 <p>Deskripsi singkat halaman pertama.</p>
             </div>
-            <div class="menu-card" onclick="openPage('halaman2.html')">
+            <div class="menu-card" onclick="openPage('Instagram.html')">
                 <h3>Instagram</h3>
                 <p>Deskripsi singkat halaman kedua.</p>
             </div>
-            <div class="menu-card" onclick="openPage('halaman3.html')">
+            <div class="menu-card" onclick="openPage('Discord.html')">
                 <h3>Discord</h3>
                 <p>Deskripsi singkat halaman ketiga.</p>
             </div>
