--- a/Tiktok.html
+++ b/Tiktok.html
@@ -15,7 +15,7 @@
     <section class="hero">
         <div class="hero-content">
             <h1>TikTok</h1>
-            <p>Ini adalah halaman tambahan dengan tema yang sama.</p>
+            <p>TikTok adalah platform media sosial berbasis video pendek yang memungkinkan pengguna membuat, mengedit, dan membagikan video dengan durasi mulai dari beberapa detik hingga beberapa menit. Aplikasi ini populer karena fitur kreatifnya, seperti filter, efek, musik latar, dan algoritma yang sangat personal dalam menampilkan konten yang relevan bagi setiap pengguna.</p>
             <a href="Sann.html" class="btn">Kembali ke Menu</a>
         </div>
     </section>
