--- a/Instagram.html
+++ b/Instagram.html
@@ -15,7 +15,7 @@
     <section class="hero">
         <div class="hero-content">
             <h1>Instagram</h1>
-            <p>Ini adalah halaman tambahan dengan tema yang sama.</p>
+            <p>Instagram (IG) adalah platform media sosial yang memungkinkan pengguna untuk berbagi foto, video, dan cerita (Instagram Stories) dengan pengikut mereka. Aplikasi ini berfokus pada konten visual dan memiliki berbagai fitur interaktif untuk berkomunikasi dan berkreasi.</p>
             <a href="Sann.html" class="btn">Kembali ke Menu</a>
         </div>
     </section>
