--- a/Discord.html
+++ b/Discord.html
@@ -15,7 +15,7 @@
     <section class="hero">
         <div class="hero-content">
             <h1>Discord</h1>
-            <p>Ini adalah halaman tambahan dengan tema yang sama.</p>
+            <p>Discord adalah aplikasi komunikasi yang memungkinkan pengguna untuk melakukan chat, panggilan suara, dan video dalam server yang dapat disesuaikan. Discord awalnya populer di kalangan gamer, tetapi sekarang digunakan oleh berbagai komunitas, termasuk pengembang, pelajar, dan penggemar topik tertentu.</p>
             <a href="Sann.html" class="btn">Kembali ke Menu</a>
         </div>
     </section>
