--- a/index.html
+++ b/index.html
@@ -50,15 +50,15 @@
         <div class="features-container">
             <div class="feature-card">
                 <h3>TikTok</h3>
-                <p></p>
+                <p>http://tiktok.com/@ellcontol</p>
             </div>
             <div class="feature-card">
                 <h3>Instagram</h3>
-                <p></p>
+                <p>https://www.instagram.com/ellcontol?igsh=ZThxdms0MHdoamdz</p>
             </div>
             <div class="feature-card">
                 <h3>Diacord</h3>
-                <p></p>
+                <p>comming soom</p>
             </div>
         </div>
     </section>
