--- a/Sann.html
+++ b/Sann.html
@@ -34,15 +34,15 @@
         <div class="menu-container">
             <div class="menu-card" onclick="openPage('Tiktok.html')">
                 <h3>TikTok</h3>
-                <p>Deskripsi singkat halaman pertama.</p>
+                <p>Tentang TikTok.</p>
             </div>
             <div class="menu-card" onclick="openPage('Instagram.html')">
                 <h3>Instagram</h3>
-                <p>Deskripsi singkat halaman kedua.</p>
+                <p>Tentang Instagram.</p>
             </div>
             <div class="menu-card" onclick="openPage('Discord.html')">
                 <h3>Discord</h3>
-                <p>Deskripsi singkat halaman ketiga.</p>
+                <p>Tentang Discord.</p>
             </div>
         </div>
     </section>
